# clipwiki

./: .gitignore  README-CN.md  pyproject.toml
src/clipwiki/: __init__.py  answering.py  cli.py  compiler.py  core.py  incremental.py  ingest.py  llm.py  markdown_normalization.py  markdown_sections.py  note_index.py  prompts.py  schemas.py  tokens.py  validation.py  wiki_graph.py  wiki_maintenance.py
src/clipwiki/prompts/: classify_note_mode.md  clean_ingest_content.md  edit_section.md  extract_knowledge_units.md  plan_note_update.md  synthesize_knowledge_units.md  validate_note_update.md
tests/: test_clipwiki_standalone.py
